feat:fix setting for cors and logging

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": ""
-  }
+  },
+  "CorsOrigins": "http://localhost:5173"
 }
